--- a/WarehouseEcommerce/Views/Theme/Smart/Orders/_AddOrEditAddress.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Orders/_AddOrEditAddress.cshtml
@@ -15,7 +15,7 @@
             </div>
             <div id="selectAddresss" class="col-lg-6" style="display: none">
                 <div class="form-group">
-                    <select id="selectApiAddress" name="address" class="find-address-select" onchange="OnchangeDropdownAddress()">
+                    <select id="selectApiAddress" name="address" class="find-address-select" onchange="onAddressDropdownChange()">
                     </select>
                 </div>
             </div>
