--- a/WarehouseEcommerce/Views/Theme/Smart/Orders/_BillingAddress.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Orders/_BillingAddress.cshtml
@@ -8,9 +8,9 @@
             <h5 class="subheadCmn">Billing Address</h5>
             @Html.Partial("_AddressDetail", billingAddress)
         <div class="btnWrap">
-            <a href="@Url.Action("Checkout", "Orders")" class="btmBtn">Select Address</a>
-            <a href="@Url.Action("Checkout", "Orders")" class="btmBtn">Edit Address</a>
-            <a href="@Url.Action("GoToPreviousStep","orders")" class="btmBtn">Back</a>
+            <a href="@Url.Action("Checkout", "Orders")" class="btmBtn">SELECT ADDRESS</a>
+            <a href="@Url.Action("Checkout", "Orders")" class="btmBtn">EDIT ADDRESS</a>
+            <a href="@Url.Action("GoToPreviousStep","orders")" class="btmBtn">BACK</a>
         </div>
         </div>
     }
