--- a/WarehouseEcommerce/Views/Theme/Smart/Orders/_CollectionPoint.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Orders/_CollectionPoint.cshtml
@@ -17,6 +17,6 @@
             </div>
             <div class="collection-points row mt-3"></div>
         </div>
-        <button class="addnwShopAdrrbtn" onclick="chooseCollectionPoint(@((int)CheckoutStep.PaymentMethod))">Select Collection Point</button>
+        <button class="addnwShopAdrrbtn" onclick="chooseCollectionPoint(@((int)CheckoutStep.PaymentDetails))">Select Collection Point</button>
     </div>
 </div>
