--- a/WarehouseEcommerce/Views/Theme/Smart/Orders/_ShipmentRule.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Orders/_ShipmentRule.cshtml
@@ -16,6 +16,6 @@
         </div>
     }
     <div class="btnWrap">
-        <a href="javascript:;" class="addnwShopAdrrbtn" onclick="chooseShippingRule(@((int)CheckoutStep.PaymentMethod))">SELECT SHIPMENT TYPE</a>
+        <a href="javascript:;" class="addnwShopAdrrbtn" onclick="chooseShippingRule(@((int)CheckoutStep.PaymentDetails))">SELECT SHIPMENT TYPE</a>
     </div>
 </div>
