--- a/WarehouseEcommerce/Views/Theme/University/Shared/_CartItemsPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_CartItemsPartial.cshtml
@@ -27,7 +27,7 @@
                             @Html.Hidden("collectionPointAddress", Model.CollectionPointAddress)
                             @Html.Partial("_CollectionPointSelector")
                             <div>
-                                <button class="addnwShopAdrrbtn" id="select-collection-point__button" onclick="setSelectedCollectionPoint()" data-toggle="modal" disabled data-target="#ChooseStoreModal">Select Collection Point</button>
+                                <button class="addnwShopAdrrbtn" id="select-collection-point__button" onclick="setSelectedCollectionPoint()" data-toggle="modal" disabled data-target="#ChooseStoreModal">SELECT COLLECTION POINT</button>
                             </div>
                         </div>
                     </div>
@@ -86,7 +86,7 @@
                             @if (Model.ShippmentAddresses.Count() > 0)
                             {
                                 <div>
-                                    <button class="addnwShopAdrrbtn" id="select-shipping-address__button" onclick="setSelectedShippingAddress()" data-toggle="modal" disabled data-target="#ChooseShippingAddressModal">Select Address</button>
+                                    <button class="addnwShopAdrrbtn" id="select-shipping-address__button" onclick="setSelectedShippingAddress()" data-toggle="modal" disabled data-target="#ChooseShippingAddressModal">SELECT ADDRESS</button>
                                 </div>
                             }
                         </div>
