--- a/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
@@ -116,6 +116,7 @@
     @RenderSection("scripts", required: false)
     <script src="~/Scripts/javascript-product-by-attribute.js"></script>
     <script src="~/Scripts/javascript-searchproduct.js"></script>
+    <script src="~/Scripts/javascript-checkout-process.js"></script>
     <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
 
     <script src="~/Content/Theme/University/app/js/owl.carousel.min.js"></script>
@@ -125,7 +126,7 @@
     <script src="~/Content/Theme/University/app/js/jquery-confirm.min.js"></script>
     <script src="~/Content/Theme/University/app/js/Uni_KitProductDetail_Custom.js"></script>
     <script src="~/Scripts/jquery.ui.touch-punch.min.js"></script>>
-    
+
 </body>
 </html>
 <script>
