--- a/WarehouseEcommerce/Views/Theme/University/Shared/_ShippingAddressSelector.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_ShippingAddressSelector.cshtml
@@ -7,7 +7,7 @@
                 <h6 class="pb-1">Please Put The Destination PostCode To Ckeck</h6>
                 <div class="findAddrWrap">
                     <input type="text" id="shipping-address-post-code__input" class="findAddrInput shipping-target-postCode" placeholder="Enter Postcode" />
-                    <button class="fadBtn" onclick="selectPostCode();">Check</button>
+                    <button class="fadBtn" onclick="selectPostCode();">CHECK</button>
                 </div>
             </div>
         </div>
